Minor Bugs removed

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -141,7 +141,7 @@
     </div>
 
     <!-- Hidden file input for actual upload -->
-    <input type="file" id="fileInput" accept=".pdf,.jpg,.jpeg,.png,.doc,.docx" style="display: none;" />
+    <input type="file" id="fileInput" accept=".pdf" style="display: none;" />
 
     <script src="{{ url_for('static', filename='js/chat.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
